added project routes and state management

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,16 +1,16 @@
 <section id="home">
 	<div>
-		<h3>Start a New Project</h3>
-		<form>
-			<input type="text" placeholder="Name of Project" />
+		<h3>Document a New Project</h3>
+		<form ng-submit="createProject({title: projectTitle})">
+			<input type="text" placeholder="Name of Project" ng-model="projectTitle" required/>
 			<button type="submit">Create</button>
 		</form>
 	</div>
 	<div>
 		<h3>Load a Project</h3>
 		<form>
-			<input type="text" placeholder="Code" ng-model="project.id"/>
-			<button ui-sref="project({id: project.id})">Load</button>		
+			<input type="text" placeholder="Code" ng-model="projectId" required/>
+			<button ui-sref="project({id: projectId})">Load</button>		
 		</form>
 	</div>
 </section>
