--- a/browser/js/project/project.view.html
+++ b/browser/js/project/project.view.html
@@ -1,4 +1,4 @@
-<br>
-<br>
-<br>
-<p>You made it to {{project._id}}'s project page</p>
+<h4>Project:</h4>
+<h1>{{project.title}}</h1>
+<button ui-sref="editor({id: project._id, project: project})">Edit</button>
+<p>{{project}}</p>
