--- a/browser/js/shared/navbar/navbar.html
+++ b/browser/js/shared/navbar/navbar.html
@@ -1,5 +1,9 @@
 <nav class="navbar">
-    <div class="container">
-        <span translate="HELLO"></span>
-    </div>
+	<div class="container">
+		<span ui-sref="home">logo</span>
+		<ul>
+			<li>Login</li>
+			<li>Signup</li>
+		</ul>
+	</div>
 </nav>
