Added update and delete routes for projects

--- a/browser/js/project/project.view.html
+++ b/browser/js/project/project.view.html
@@ -1,4 +1,10 @@
 <h4>Project:</h4>
 <h1>{{project.title}}</h1>
+<br>
+Language: {{project.language}}<br>
+Created: {{project.started}}<br>
+<br>
+Problem Statement: {{project.problem_statement}}<br>
+Description: {{project.description}}<br>
+<br>
 <button ui-sref="editor({id: project._id, project: project})">Edit</button>
-<p>{{project}}</p>
