Setup routes, states, and skeleton of high level navigation. Included OAuth signup and login for Github and Twitter

--- a/browser/js/project/project.view.html
+++ b/browser/js/project/project.view.html
@@ -7,4 +7,4 @@ Created: {{project.started}}<br>
 Problem Statement: {{project.problem_statement}}<br>
 Description: {{project.description}}<br>
 <br>
-<button ui-sref="editor({id: project._id, project: project})">Edit</button>
+<button ui-sref="projectEdit({id: project._id, project: project})">Edit</button>
