--- a/browser/js/common/navbar/navbar.html
+++ b/browser/js/common/navbar/navbar.html
@@ -1,12 +1,11 @@
 <nav class="navbar">
 	<div class="container">
 		<span class='logo' ui-sref="showcase.projects">CivHub</span>
-		<form on-submit ng-submit="submitSearch(query)">
+		<form on-submit ng-submit="submitSearch(query)" ng-hide="$parent.$state.includes('showcase')">
 			<input type="text" placeholder="Find a project" ng-model='query'/>
 			<button type='submit' translate="SEARCH"></button>
 		</form>
 		<ul>
-			<li translate="SHARE YOUR WORK" ui-sref="create"></li>
 			<li ng-repeat="item in itemsHide" ng-hide="isLoggedIn()" ui-sref="{{item.state}}" translate="{{item.label}}"></li>
 			<li ng-repeat="item in itemsShow" ng-show="isLoggedIn()" ui-sref="{{item.state}}" translate="{{item.label}}"></li>
 		</ul>
