--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,1 +1,9 @@
-hey, login!
+Welcome back!
+
+<div class="auth-panel">
+	Sign In:
+	<div>
+		<oauth-button provider-name="GitHub"></oauth-button></p>
+		<oauth-button provider-name="Twitter"></oauth-button></p>
+	</div>
+</div>
