--- a/browser/js/signup/signup.html
+++ b/browser/js/signup/signup.html
@@ -1,18 +1,11 @@
-<!-- Civhub is currently invite only to ensure noteworthy work doesn't get drowned out and quality is maintained.
+Civhub is a place to share projects and make connections with other civic organizations around the world. 
 
-If you'd like to join, send us an e-mail or shoot a message to us on Twitter. -->
+Create an account and start sharing!
 
-<!-- Signup with Email
-<div>
-	<form id="sign-up-form" name="signInForm" ng-submit="sendSignUp(signUp)">
-		<input type="text" ng-model="signUp.email" placeholder="Enter Email" />
-		<input type="text" ng-model="signUp.password" placeholder="Enter Password" />
-		<button type="submit">Submit</button>
-	</form>	
-</div> -->
-Sign in:
-<div>
-	<oauth-button provider-name="GitHub"></oauth-button></p>
-	<oauth-button provider-name="Twitter"></oauth-button></p>
+<div class="auth-panel">
+	Create an Account:
+	<div>
+		<oauth-button provider-name="GitHub"></oauth-button></p>
+		<oauth-button provider-name="Twitter"></oauth-button></p>
+	</div>
 </div>
-
