--- a/browser/js/showcase/projects/project-tile.html
+++ b/browser/js/showcase/projects/project-tile.html
@@ -1,7 +1,8 @@
-<div>
-	<br>
-	<div class="container">
-		<span ui-sref="projectView({id: project._id})">title: {{project.title}}</span>
-		description: {{project.description}}
-	</div>
+<div class="project-tile-problem">
+	<span>{{project.problem_statement}}</span>
 </div>
+<div class="project-tile-solution">
+	<span ui-sref="projectView({id: project._id})">{{project.title}}</span>
+	<span ui-sref="projectView({id: project._id})">{{project.description}}</span>	
+</div>
+<br>
