--- a/browser/js/showcase/projects/projects.html
+++ b/browser/js/showcase/projects/projects.html
@@ -1,1 +1,1 @@
-<project-tile ng-repeat="project in projectShowcase"></project-tile>
+<project-tile class="project-tile" ng-repeat="project in projectShowcase"></project-tile>
