--- a/browser/js/search/search.html
+++ b/browser/js/search/search.html
@@ -1,3 +1,6 @@
-made it to a search!
-
-The query: {{query}}
+<div>
+	Searching for {{query}}
+</div>
+<div class="search-projects">
+	<project-tile class="project-tile" ng-repeat="project in projects"></project-tile>
+</div>
