--- a/browser/js/profile/profile.html
+++ b/browser/js/profile/profile.html
@@ -3,7 +3,7 @@
 	Name: {{user.name}}
 
 	<ul>
-		<li ui-sref="profile.contributions">Contributions</li>
+		<li ui-sref="profile.collaborations">Collaborations</li>
 		<li ui-sref="profile.appreciations">Appreciations</li>
 		<li ui-sref="profile.requests">Requests</li>
 		<li ui-sref="profile.settings">Settings</li>
