--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,9 +1,18 @@
-Welcome back!
+<div class="showcase header-section">
+  <div class="container">
 
-<div class="auth-panel">
-	Sign In:
-	<div>
-		<oauth-button provider-name="GitHub"></oauth-button></p>
-		<oauth-button provider-name="Twitter"></oauth-button></p>
-	</div>
-</div>
+    
+    <div class="auth-panel four columns offset-by-four">
+      <h4>Welcome back!</h4>
+      <div class="project-tile project-tile-problem">
+        <h6>Sign in with...</h6>
+        <hr />
+        <div class="float-center cf">
+          <oauth-button provider-name="GitHub"></oauth-button>
+          <oauth-button provider-name="Twitter"></oauth-button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>  
