--- a/browser/js/signup/signup.html
+++ b/browser/js/signup/signup.html
@@ -1,11 +1,18 @@
-Civhub is a place to share projects and make connections with other civic organizations around the world. 
+<div class="showcase header-section">
+  <div class="container">
 
-Create an account and start sharing!
+    
+    <div class="auth-panel four columns offset-by-four">
+      <h4>Start collaborating with others around the world</h4>
+      <div class="project-tile project-tile-problem">
+        <h6>Create an Account with...</h6>
+        <hr />
+        <div class="float-center cf">
+          <oauth-button provider-name="GitHub"></oauth-button>
+          <oauth-button provider-name="Twitter"></oauth-button>
+        </div>
+      </div>
+    </div>
 
-<div class="auth-panel">
-	Create an Account:
-	<div>
-		<oauth-button provider-name="GitHub"></oauth-button></p>
-		<oauth-button provider-name="Twitter"></oauth-button></p>
-	</div>
-</div>
+  </div>
+</div>  
