--- a/browser/js/common/footer/footer.html
+++ b/browser/js/common/footer/footer.html
@@ -1,7 +1,10 @@
 <div class="footer">
-	<ul>
-		<li ng-click="changeLanguage('en')">English</li>
-		<li ng-click="changeLanguage('fr')">Français</li>
-		<li>Español</li>
-	</ul>
+  <div class="container">
+    <ul>
+      <li ng-click="changeLanguage('en')">English</li>
+      <li ng-click="changeLanguage('fr')">Français</li>
+      <li ng-click="changeLanguage('es')">Español</li>
+    </ul>
+    <a href="https://github.com/UnitedWorks/CivHub" class="made-by">Made by Fellow Citizens</a>
+  </div>
 </div>
