--- a/browser/js/showcase/showcase.html
+++ b/browser/js/showcase/showcase.html
@@ -1,4 +1,4 @@
-<div class="showcase header-section">
+<div class="showcase-shorter header-section">
   <div class="container">
     <h2>Find, Learn, and Collaborate</h2>
     <p>to improve government and civic life around the world.</p>
