added hello bar and broke navbar into directives

--- a/browser/index.html
+++ b/browser/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body ng-app="CiviHub">
-    <navbar></navbar>
+    <page-header></page-header>
     <div id="main" >
         <ui-view></ui-view>    
     </div>
