--- a/browser/js/search/search.html
+++ b/browser/js/search/search.html
@@ -1,6 +1,6 @@
 <div class="project-editor">
   <div class="content-section">
-    <div class="container">
+    <div class="container search-section">
       <span class="label">Results for</span>
       <h4>{{query}}</h4>
       <div class="search-projects">
