--- a/browser/js/common/hello/hello.html
+++ b/browser/js/common/hello/hello.html
@@ -4,6 +4,6 @@
     <a href="https://github.com/UnitedWorks/CivHub"> features</a>,
     <a href="https://github.com/UnitedWorks/CivHub/tree/master/server/languages"> translations</a>,
     <a href="https://github.com/UnitedWorks/CivHub/issues"> and fix things</a> 
-    <span class="float-right">Want to help? Feel free to <a href="mailto:x@markthemark.com">email me</a></span>
+    <span class="float-right">Want to help? Feel free to <a href="mailto:x@markthemark.com">get in touch</a>.</span>
   </div>
 </div>
